Remove hardcoded sentence in the end of guide section; Fix overflow in code arrow

--- a/src/main/content/_assets/css/guide-multipane.css
+++ b/src/main/content/_assets/css/guide-multipane.css
@@ -143,6 +143,7 @@ header {
     border: 1px solid #96bc32;
     border-left: 8px solid #96bc32;
     border-radius: 3px;    
+    overflow: hidden;
 }
 
 #guide_content .command code {
